@@ -1,3 +1,8 @@
+2008-09-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Ported build system of spellcheck plugin.
+
+
 2008-07-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Make plugin work together with Geany plugin API v78.
